--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Mongoose Store</title>
-	</head>
+	<%- include("partials/head.ejs") %>
 	<body>
 		<h1>Add New Item</h1>
 		<form action="/store" method="POST">
+			<div class="form">
 			Name: <input type="text" name="name" /><br />
-			Description: <input type="text" name="description" /><br />
+			</div>
+			<div class="form ">
+			Description: <input class="desc" type="text" name="description" /><br />
+			</div>
+			<div class="form">
             Image: <input type="text" name="img" /><br />
+			</div>
+			<div class="form">
             Price: <input type="number" name="price" /><br />
+			</div>
+			<div class="form">
             Quantity: <input type="number" name="qty" /><br />
-		
-			<input type="submit" name="" value="Add Item" />
+			</div>
+			<input class="button" type="submit" name="" value="Add Item" />
 		</form>
 	</body>
 	</body>
