--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mongoose Store</title>
-  </head>
+  <%- include("partials/head.ejs") %>
   <body>
     <nav>
         <a href="/store/new">Add a New Item</a>
       </nav>
-    <h1>Mongoose Store</h1>
-    <ul>
+    <h1> <span>Mongoose Store</h1>
+
+
+    <ul class="container">
       <% items.forEach(item => { %>
       <li>
-        <a href="/store/<%=item._id; %>"> <%=item.name; %> </a> <br>
+        <a class="name" href="/store/<%=item._id; %>"> <%=item.name; %> </a> <br>
         <a class="image" href="/store/<%=item._id; %>"><img src="<%=item.img %>"> </a><br>
         <form action="/store/<%= item.id %>?_method=DELETE" method="POST">
-          <input type="submit" value="DELETE" />
-          <a href="/store/<%=item._id %>/edit">Edit</a>
+          <input class="button delete" type="submit" value="DELETE" />
+          <a class="button edit" href="/store/<%=item._id %>/edit">EDIT</a>
         </form>
       </li>
       <% }) %>
